# mcp-discord

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  smithery.yaml
.cursor/rules/: discord_embed.mdc
src/discord_mcp/: __init__.py  server.py
src/discord_mcp/examples/: chat.md  moderation.md
