[project]
name = "mcp-discord"
version = "0.1.0"
description = "Discord integration for Model Context Protocol"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "discord.py>=2.3.0",
    "mcp>=0.1.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/yourusername/mcp-discord"
Repository = "https://github.com/yourusername/mcp-discord.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true